--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,8 +13,8 @@
 	<% end %>
 
 	<div class="field">
-		<%= f.label :name %><br/>
-		<%= f.text_field :name %>
+		<%= f.label :email %><br/>
+		<%= f.text_field :email %>
 	</div>
 
 	<div class="field">
