--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Sign Up!</h1>
 
 <%= form_for @user do |f| %>
-	<% if @users.errors.any? %>
+	<% if @user.errors.any? %>
 		<div class="error_messages">
 			<h2>Form is Invalid</h2>
 				<ul>
