--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,17 +1,16 @@
 <h1>Restaurants</h1>
 
+	<%= link_to "Add a Restaurant", new_restaurant_url %> 
+
 <% @restaurants.each do |restaurant| %>
 
-<div> 
-	<%= link_to "Add a Restaurant", new_restaurant_url %> 
-	<%= link_to "Edit", edit_restaurant_path(restaurant) %>,
-	<%= link_to "Delete", restaurant, method: :delete, data: {confirm: "Are you sure you want to delete?"} %>
-</div>
-
-	<p> <%= restaurant.name %>, 
+	<p>
+		<%= restaurant.name %>, 
 		<%= restaurant.location %>,
 		<%= restaurant.description %>.
-		<%= link_to "Show", restaurant_path(restaurant) %>
+		<%= link_to "Show", restaurant_path(restaurant) %>,
+		<%= link_to "Edit", edit_restaurant_path(restaurant) %>,
+		<%= link_to "Delete", restaurant, method: :delete, data: {confirm: "Are you sure you want to delete?"} %>
 	</p>
 
 <% end %>
