--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	
 
 <p class="userinfo">
 <% if current_user %>
-  Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), 
-  :method => :delete %>
+  Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
 <% else %>
    <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
 <% end %>
