--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Restaurants</h1>
 
-	<%= link_to "Add a Restaurant", new_restaurant_url %> 
+	<%= link_to "Create a Reservation", new_reservation_url %></br>
+	<%= link_to "Add a Restaurant", new_restaurant_url %>
 
 <% @restaurants.each do |restaurant| %>
 
