--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -24,6 +24,10 @@
 		<%= f.text_area :description %>
 	</div>
 
+	<div class="field">
+		<%= f.label :max_occupy %></br>
+		<%= f.text_field :max_occupy %>
+
 	<div class="action"><%= f.submit %></div>
 
 <% end %>
