--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,17 +1,27 @@
-<h1>Restaurants</h1>
+<div class="container">
+
+	<h1>Restaurants</h1>
 
 	<%= link_to "Create a Reservation", new_reservation_url %></br>
-	<%= link_to "Add a Restaurant", new_restaurant_url %>
+	
+	<div class="link"><%= link_to "Add a Restaurant", new_restaurant_url %></div>
 
-<% @restaurants.each do |restaurant| %>
+	<table class="table">
 
-	<p>
-		<%= restaurant.name %>, 
-		<%= restaurant.location %>,
-		<%= restaurant.description %>.
-		<%= link_to "Show", restaurant_path(restaurant) %>,
-		<%= link_to "Edit", edit_restaurant_path(restaurant) %>,
-		<%= link_to "Delete", restaurant, method: :delete, data: {confirm: "Are you sure you want to delete?"} %>
-	</p>
+		<% @restaurants.each do |restaurant| %>
+		<tr>
 
-<% end %>
+			<td><%= restaurant.name %></td>
+			<td><%= restaurant.location %></td>
+			<td><%= restaurant.description %></td>
+			<td><%= link_to "Show", restaurant_path(restaurant) %></td>
+			<td><%= link_to "Edit", edit_restaurant_path(restaurant) %></td>
+			<td><%= link_to "Delete", restaurant, method: :delete, data: {confirm: "Are you sure you want to delete?"} %></td>
+
+		</tr>
+
+		<% end %>
+
+	</table>
+
+</div>
