--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,52 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  			<% if current_user %>
+				Log In
+			<% else %>
+				Log Out 
+			<% end %>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel"></h4>
+
+
+      </div>
+      <div class="modal-body">
+
+<%= form_tag sessions_path do %>
+
+	<div class="field">
+		<%= label_tag :email %><br/>
+		<%= text_field_tag :email, params[:email] %>
+	</div>
+
+	<div class= "field">
+		<%= label_tag :password %><br/>
+		<%= password_field_tag :password %>
+	</div>
 	
+	<div class"actions"><%= submit_tag "Log in" %> <%= link_to 'Cancel', restaurants_path %></div>
+	
+<% end %>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <p class="userinfo">
 <% if current_user %>
