--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>Sign Up!</h1>
 
 <%= form_for @user do |f| %>
@@ -27,6 +29,8 @@
 		<%= f.password_field :password_confirmation %><br/>
 	</div>
 
-	<div class="action"><%= f.submit %></div>
+	<div class="action"><%= f.submit %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
 
 <% end %>
+
+</div>
