--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,7 +3,7 @@
 	<h1>Restaurants</h1>
 
 	<%= link_to "Create a Reservation", new_reservation_url %></br>
-	
+
 	<div class="link"><%= link_to "Add a Restaurant", new_restaurant_url %></div>
 
 	<table class="table">
@@ -14,9 +14,13 @@
 			<td><%= restaurant.name %></td>
 			<td><%= restaurant.location %></td>
 			<td><%= restaurant.description %></td>
+
+			<% if current_user && current_user.is_admin? %> 
+
 			<td><%= link_to "Show", restaurant_path(restaurant) %></td>
 			<td><%= link_to "Edit", edit_restaurant_path(restaurant) %></td>
 			<td><%= link_to "Delete", restaurant, method: :delete, data: {confirm: "Are you sure you want to delete?"} %></td>
+			<% end %>
 
 		</tr>
 
