login/signup buttons/navbar

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="container"
+
 <%= form_for @restaurant do |f| %>
 	<% if @restaurant.errors.any? %>
 		<div id="error_explanation">
@@ -31,3 +33,5 @@
 	<div class="action"><%= f.submit %></div>
 
 <% end %>
+
+</div>
