--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Openseat</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+	<title>Openseat</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
 
-<!-- Button trigger modal -->
-<% if current_user %>
-<%= link_to "Log out", session_path("current"), :method => :delete, class: "btn btn-primary btn-lg" %>
-<% else %>
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> 
-				Log In
-</button>
-<% end %>
+	<!-- Navbar -->
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
-				
+		<!-- Button trigger modal -->
+		<% if current_user %>
+		<%= link_to "Log out", session_path("current"), :method => :delete, class: "btn btn-primary btn-lg" %>
+		<% else %>
+		<button class="btn btn-primary btn-lg navbar-btn" data-toggle="modal" data-target="#myModal"> 
+			Log In
+		</button>
+		<% end %>
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel"></h4>
+		<% if current_user %>
+		Signed in as <%= current_user.email %>.
+		<% else %>
+		<%= link_to "Sign Up", new_user_path, class: "btn btn-primary btn-lg navbar-btn" %>
+		<% end %>
+
+	</nav>
+
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel"></h4>
 
 
-      </div>
-      <div class="modal-body">
+				</div>
+				<div class="modal-body">
 
-<%= form_tag sessions_path do %>
+					<%= form_tag sessions_path do %>
 
-	<div class="field">
-		<%= label_tag :email %><br/>
-		<%= text_field_tag :email, params[:email] %>
+					<div class="field">
+						<%= label_tag :email %><br/>
+						<%= text_field_tag :email, params[:email] %>
+					</div>
+
+					<div class= "field">
+						<%= label_tag :password %><br/>
+						<%= password_field_tag :password %>
+					</div>
+
+					<div class="modal-footer">
+
+						<div class="actions"><%= submit_tag "Log in", class: "btn btn-primary" %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
+
+						<% end %>
+
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<div class= "field">
-		<%= label_tag :password %><br/>
-		<%= password_field_tag :password %>
-	</div>
-	
-    <div class="modal-footer">
 
-		<div class="actions"><%= submit_tag "Log in", class: "btn btn-primary" %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
-	
-<% end %>
-      </div>
+	<% if flash[:notice] %>
+	<p id="notice"><%= flash[:notice] %></p>
+	<% end %>
 
-<!--         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
-        <!-- <button type="button" class="btn btn-primary">Submit</button> -->
-      </div>
-    </div>
-  </div>
-</div>
+	<% if flash[:alert] %>
+	<p id="alert"><%= flash[:alert] %></p>
+	<% end %>
 
-<p class="userinfo">
-<% if current_user %>
-  Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-<% else %>
-   <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-<% end %>
-</p>
-
- <% if flash[:notice] %>
-      <p id="notice"><%= flash[:notice] %></p>
- <% end %>
-
- <% if flash[:alert] %>
-      <p id="alert"><%= flash[:alert] %></p>
- <% end %>
-
-<%= yield %>
+	<%= yield %>
 
 </body>
 </html>
