--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,19 @@
 		<% else %>
 		<%= link_to "Sign Up", new_user_path, class: "btn btn-primary btn-lg navbar-btn" %>
 		<% end %>
+		
+<!-- 			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Search">
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form> -->
+
+		<form class="navbar-form navbar-right" role="search">
+		<%= form_tag restaurants_path, method: :get, authentication: false, id: 'search-form' do %>
+		<%= text_field_tag :search, params[:search] %>
+		<%= submit_tag "Search" %>
+		<% end %>
+
 
 	</nav>
 
@@ -64,16 +77,15 @@
 		</div>
 	</div>
 
+		<% if flash[:notice] %>
+		<p id="notice"><%= flash[:notice] %></p>
+		<% end %>
 
-	<% if flash[:notice] %>
-	<p id="notice"><%= flash[:notice] %></p>
-	<% end %>
+		<% if flash[:alert] %>
+		<p id="alert"><%= flash[:alert] %></p>
+		<% end %>
 
-	<% if flash[:alert] %>
-	<p id="alert"><%= flash[:alert] %></p>
-	<% end %>
+		<%= yield %>
 
-	<%= yield %>
-
-</body>
-</html>
+	</body>
+	</html>
