--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,35 +1,28 @@
-<div class="container">
 
-	<h1>Restaurants</h1>
+<%= render 'restaurant' %>
 
-	<%= link_to "Create a Reservation", new_reservation_url %></br>
+<% link_to "Back", restaurants_url %>
 
-	<% if current_user && current_user.is_admin? %>
+<!-- // <script type="text/javascript">
 
-	<div class="link"><%= link_to "Add a Restaurant", new_restaurant_url %></div>
+// function display_search_results() {
+//     // readyState === 4 means that the asynchronous request completed successfully
+//     if (this.readyState === 4) {
+//     	console.log(this);
+//     	document.getElementById('restaurants').innerHTML = this.responseText;
+//     }
+// }
 
-	<% end %>
+// var form = document.getElementById('search-form');
+// form.addEventListener('submit', function(event) {
+// 	event.preventDefault();
+// 	var searchValue = document.getElementById('search').value;
 
-	<table class="table">
+// 	var xhr = new XMLHttpRequest();
+// 	xhr.onload = display_search_results;
+// 	xhr.open('GET', '/restaurants?search=' + searchValue, true);
+// 	xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+// 	xhr.send();
+// });
 
-		<% @restaurants.each do |restaurant| %>
-		<tr>
-
-			<td><%= restaurant.name %></td>
-			<td><%= restaurant.location %></td>
-			<td><%= restaurant.description %></td>
-
-			<% if current_user && current_user.is_admin? %> 
-
-			<td><%= link_to "Show", restaurant_path(restaurant) %></td>
-			<td><%= link_to "Edit", edit_restaurant_path(restaurant) %></td>
-			<td><%= link_to "Delete", restaurant, method: :delete, data: {confirm: "Are you sure you want to delete?"} %></td>
-			<% end %>
-
-		</tr>
-
-		<% end %>
-
-	</table>
-
-</div>
+// </script> -->
