--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,7 +29,7 @@
 		<%= f.password_field :password_confirmation %><br/>
 	</div>
 
-	<div class="action"><%= f.submit %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
+	<div class="action"><%= f.submit "Submit", class: "btn btn-default" %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
 
 <% end %>
 
