--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
 	<!-- Navbar -->
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-
+		<div class="container-fluid">
+			
 		<!-- Button trigger modal -->
 		<% if current_user %>
 		<%= link_to "Log out", session_path("current"), :method => :delete, class: "btn btn-primary btn-lg" %>
@@ -25,6 +26,7 @@
 		<% else %>
 		<%= link_to "Sign Up", new_user_path, class: "btn btn-primary btn-lg navbar-btn" %>
 		<% end %>
+
 		
 <!-- 			<div class="form-group">
 				<input type="text" class="form-control" placeholder="Search">
@@ -38,7 +40,7 @@
 		<%= submit_tag "Search" %>
 		<% end %>
 
-
+		</div>
 	</nav>
 
 	<!-- Modal -->
