--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,3 +1,9 @@
-<h1>You have made a reservation for: <%= @reservation.restaurant.name %></h1>
+<div class="container">
+
+<h1> You have successfully made a reservation for: <%= @reservation.restaurant.name %></h1>
 <p><strong>Party Size: </strong></p> <%= @reservation.party_size %></p>
 <h3><%= @reservation.start %></h3>
+
+<%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %>
+
+</div>
