--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,73 +11,70 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
-			
-		<!-- Button trigger modal -->
-		<% if current_user %>
-		<%= link_to "Log out", session_path("current"), :method => :delete, class: "btn btn-primary btn-lg" %>
-		<% else %>
-		<button class="btn btn-primary btn-lg navbar-btn" data-toggle="modal" data-target="#myModal"> 
-			Log In
-		</button>
-		<% end %>
 
-		<% if current_user %>
-		Signed in as <%= current_user.email %>.
-		<% else %>
-		<%= link_to "Sign Up", new_user_path, class: "btn btn-primary btn-lg navbar-btn" %>
-		<% end %>
+			<!-- Button trigger modal -->
+			<% if current_user %>
+			<%= link_to "Log out", session_path("current"), :method => :delete, class: "btn btn-primary btn-lg" %>
+			<% else %>
+			<button class="btn btn-primary btn-lg navbar-btn" data-toggle="modal" data-target="#myModal"> 
+				Log In
+			</button>
+			<% end %>
 
-		
-<!-- 			<div class="form-group">
-				<input type="text" class="form-control" placeholder="Search">
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form> -->
-
-		<form class="navbar-form navbar-right" role="search">
-		<%= form_tag restaurants_path, method: :get, authentication: false, id: 'search-form' do %>
-		<%= text_field_tag :search, params[:search] %>
-		<%= submit_tag "Search" %>
-		<% end %>
-
-		</div>
-	</nav>
-
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-					<h4 class="modal-title" id="myModalLabel"></h4>
+			<% if current_user %>
+			Signed in as <%= current_user.email %>.
+			<% else %>
+			<%= link_to "Sign Up", new_user_path, class: "btn btn-primary btn-lg navbar-btn" %>
+			<% end %>
 
 
+			<form class="navbar-form navbar-right" role="search">
+				<div class="form-group">
+					<%= form_tag restaurants_path, method: :get, authentication: false, id: 'search-form' do %>
+					<!-- <input type="text" class="form-control" placeholder="Search"> -->
+					<%= text_field_tag :search, params[:search] %>
+					<button type="submit" class="btn btn-default">Search</button>
+					<% end %>
 				</div>
-				<div class="modal-body">
 
-					<%= form_tag sessions_path do %>
+			</form>
+		</nav>
 
-					<div class="field">
-						<%= label_tag :email %><br/>
-						<%= text_field_tag :email, params[:email] %>
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="myModalLabel"></h4>
+
+
 					</div>
+					<div class="modal-body">
 
-					<div class= "field">
-						<%= label_tag :password %><br/>
-						<%= password_field_tag :password %>
-					</div>
+						<%= form_tag sessions_path do %>
 
-					<div class="modal-footer">
+						<div class="field">
+							<%= label_tag :email %><br/>
+							<%= text_field_tag :email, params[:email] %>
+						</div>
 
-						<div class="actions"><%= submit_tag "Log in", class: "btn btn-primary" %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
+						<div class= "field">
+							<%= label_tag :password %><br/>
+							<%= password_field_tag :password %>
+						</div>
 
-						<% end %>
+						<div class="modal-footer">
 
+							<div class="actions"><%= submit_tag "Log in", class: "btn btn-primary" %> <%= link_to 'Cancel', restaurants_path, class: "btn btn-default" %></div>
+
+							<% end %>
+
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 		<% if flash[:notice] %>
 		<p id="notice"><%= flash[:notice] %></p>
