--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
-
+			
 			<!-- Button trigger modal -->
 			<% if current_user %>
 			<%= link_to "Log out", session_path("current"), :method => :delete, class: "btn btn-primary btn-lg" %>
@@ -28,12 +28,14 @@
 			<% end %>
 
 
-			<form class="navbar-form navbar-right" role="search">
+			<form id="search-form" class="navbar-form navbar-right" role="search">
 				<div class="form-group">
+
 					<%= form_tag restaurants_path, method: :get, authentication: false, id: 'search-form' do %>
-					<!-- <input type="text" class="form-control" placeholder="Search"> -->
-					<%= text_field_tag :search, params[:search] %>
+					<!-- <input type="text" class: "form-control" placeholder="Search"> -->
+					<%= text_field_tag :search, params[:search], class: "form-control" %>
 					<button type="submit" class="btn btn-default">Search</button>
+
 					<% end %>
 				</div>
 
